@@ -7,6 +7,7 @@
 * Bugfixes
 
   * Override libxml-ruby's global error handler
+  * ParseOption#strict fixed
 
 === 1.3.2 / 2009-06-22
 
